--- a/style.scss
+++ b/style.scss
@@ -106,6 +106,7 @@ h1,h2,h3,h4,p,span,div{
   }
   .history{
     display: flex;
+    margin-top: 20px;
     .function{
       width:40%;
       .bold{
@@ -135,6 +136,7 @@ h1,h2,h3,h4,p,span,div{
   }
   .hobbies{
     display: flex;
+    margin-top: 20px;
     .fa{
       font-size: 60px;
       color: #1d9feb;
